# grpo-lite

./: README.md  evaluator.py  generate_sft_data.py  llms.py  main.py  pyproject.toml  requirements.txt  sft.py  sft_data.json
