[project]
name = "grpo-lite"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.3.0",
    "datasets==3.2.0",
    "einops==0.8.0",
    "huggingface-hub==0.28.1",
    "numpy==1.21.5",
    "peft==0.14.0",
    "safetensors==0.5.2",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.48.2",
    "trl==0.14.0",
    "wandb==0.19.5",
]